--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,16 @@
     "dev": "node --watch --env-file=./src/.env.dev src/index.ts"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/sqlite3": "^3.1.11",
     "typescript": "^5.9.3"
