--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   frontend:
     image: node:20-alpine
-    working_dir: /app
+    working_dir: /app/frontend
     command: sh -c "npm ci && npm run dev -- --host --port 3000"
     ports:
       - "6001:3000"
@@ -10,8 +10,8 @@ services:
       VITE_APP_NAME: "${VITE_APP_NAME:-Ninho Academy}"
       CHOKIDAR_USEPOLLING: "true"
     volumes:
-      - ./:/app
-      - frontend_node_modules:/app/node_modules
+      - ./frontend:/app/frontend
+      - frontend_node_modules:/app/frontend/node_modules
     depends_on:
       backend:
         condition: service_started
