fix: adicionar configuração de portas para o serviço backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     image: node:20-alpine
     working_dir: /app/backend
     command: sh -c "npm ci && npx prisma generate && npx prisma db push && npm run dev"
+    ports:
+      - "6002:3001"
     environment:
       DATABASE_URL: file:./dev.db
       NODE_ENV: development
