fix: corrigir importação do controlador de autenticação
Atualiza a importação do authController para remover a extensão .ts,
garantindo compatibilidade com o sistema de módulos.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - appnet
 
   backend:
-    image: node:20-alpine
+    image: node:20
     working_dir: /app/backend
     command: sh -c "npm ci && npx prisma generate && npx prisma db push && npm run dev"
     ports:
