--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "Ninho de Pardais Backend",
-  "main": "index.ts",
+  "name": "ninho-academy-backend",
+  "version": "0.0.1",
+  "description": "Backend do projeto Ninho Academy (Endpoints de API, Classes e etc...)",
+  "license": "MIT",
+  "author": "Erik G. Coutinho, Thallys Correia, Vitor Hugo Amadeu",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "ts-node --transpile-only index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx --env-file=./src/.env.dev src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.18.2",
+    "bcrypt": "^6.0.0",
+    "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "zod": "^3.22.4"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.11.20",
-    "prisma": "^5.10.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^24.10.1",
+    "@types/sqlite3": "^3.1.11",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
