--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -41,6 +41,6 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
 
-    "rewriteRelativeImportExtensions": true,
+    "rewriteRelativeImportExtensions": true
   }
 }
